--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.5.1",
+    "@hono/node-server": "^1.13.8",
     "pg": "^8.13.3",
     "typescript": "^5.8.2"
   }
