--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@hono/node-server": "^1.13.8",
     "pg": "^8.13.3",
     "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.11"
   }
 }
